alterações no no flip-card

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
           <figcaption>eCommerce</figcaption>
         </figure>
       <div class="card-back">
-        É o verso 
+        Conheça nossos trabalhos <br>
+        com as empresas de eCommerce
       </div>
     </div>
   </div>
@@ -76,7 +77,8 @@
         <figcaption>Mobile</figcaption>
       </figure>
       <div class="card-back">
-
+        Conheça nossos trabalhos <br>
+        em APPs para Mobile
       </div>
     </div>
   </div>
@@ -94,7 +96,8 @@
       </figure>
 
       <div class="card-back">
-
+        Conheça nossos trabalhos <br>
+        para Web Sites
       </div>
     </div>
   </div>
@@ -111,7 +114,7 @@
         <figcaption>Projetos pessoais</figcaption>
       </figure>
       <div class="card-back">
-
+        Portfólio de Projetos Pessoais
       </div>
     </div>
   </div>
